# jsusfx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  jsusfx.cpp  jsusfx.h  jsusfx_file.cpp  jsusfx_file.h  jsusfx_gfx.cpp  jsusfx_gfx.h  riff.cpp
WDL/: mutex.h
WDL/eel2/: Makefile  eel_net.h  glue_port.h  glue_x86.h  glue_x86_64.h  ns-eel.h  nseel-compiler.c
max/: Info.plist  README.md  gain.jsfx  jsusfx_max.cpp  jsusfx_test.maxpat  maxmspsdk.xcconfig
max/jsusfx~.xcodeproj/: project.pbxproj
max/jsusfx~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
max/jsusfx~.xcodeproj/project.xcworkspace/xcuserdata/asb2m10.xcuserdatad/: UserInterfaceState.xcuserstate
max/jsusfx~.xcodeproj/xcuserdata/asb2m10.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
max/jsusfx~.xcodeproj/xcuserdata/asb2m10.xcuserdatad/xcschemes/: max-external.xcscheme
pd/: CMakeLists.txt  Makefile  README.md  gain.jsfx  jsfx2abstract.py  jsfx2patch.py  jsfx~-help.pd  jsusfx_pd.cpp  jsusfx_test.pd  jsusfx~-help.pd  m_pd.h
scripts/liteon/: 3bandpeakfilter  README.md  applefilter12db  applefilter72db  bassmanager  butterworth24db  cheby24db.jsfx  deesser  deesser.jsfx  farmodulator  lo-fi  lorenzattractor.jsfx  moog24db  nonlinear.jsfx  np1136peaklimiter  np1136peaklimiter.jsfx  phasemetergfx  pinknoisegen.jsfx  presenceeq  prngplot  pseudostereo  rbjstereofilter12db  ringmodulator.jsfx  shelvingfilter  simplelp6db  sonic_enhancer  statevariable  stereotilt  tilteq.jsfx  tubeharmonics  tubeharmonics_amp  vumetergfx  vumetergfxsum  waveshapermulti
src/: CMakeLists.txt  jsusfx.cpp  jsusfx.h  jsusfx_file.cpp  jsusfx_file.h  jsusfx_gfx.cpp  jsusfx_gfx.h  jsusfx_serialize.cpp  jsusfx_serialize.h
src/WDL/: mutex.h
src/WDL/eel2/: Makefile  a2x64.php  nseel-cfunc.c  nseel-compiler.c
test/: CMakeLists.txt  Makefile  jsusfx_shared.c  jsusfx_test.cpp
